[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/playerShip2_red.png" type="Texture" id=3]
[ext_resource path="res://scripts/game.gd" type="Script" id=4]
[ext_resource path="res://themes/orbitrone_theme.tres" type="Theme" id=5]

[node name="game" type="Node2D"]
script = ExtResource( 4 )

[node name="player" type="Area2D" parent="."]
position = Vector2( 521, 303 )
scale = Vector2( 0.454545, 0.229299 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="player"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="player"]
rotation = 1.5708
polygon = PoolVector2Array( 0, -38, 53, 6, 30, 37, -32, 37, -57, 6 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( -9.15527e-05, -3.05176e-05 )
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 1 )

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="label_score" type="Label" parent="canvas_layer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -161.5
margin_right = 161.5
margin_bottom = 83.0
theme = ExtResource( 5 )
text = "Score: 0000"
align = 1
valign = 1
uppercase = true

[node name="restart" type="Timer" parent="."]

[connection signal="area_entered" from="player" to="player" method="_on_player_area_entered"]
[connection signal="player_killed" from="player" to="." method="_on_player_killed"]
[connection signal="timeout" from="restart" to="." method="_on_restart_timeout"]
